Removing node crap for my development sanity

--- a/myflaskapp/templates/layout.html
+++ b/myflaskapp/templates/layout.html
@@ -20,7 +20,7 @@
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
 
-  {{ stylesheet_tag('main_css') | safe }}
+    <link rel="stylesheet" href="{{url_for('.static', filename='css/style.css')}}">
 
   {% block css %}{% endblock %}
 
@@ -58,10 +58,9 @@
 {% include "footer.html" %}
 
 <!-- JavaScript at the bottom for fast page loading -->
-{{ javascript_tag('main_js') | safe }}
+<link rel="stylesheet" href="{{url_for('.static', filename='js/main.js')}}">
 {% block js %}{% endblock %}
 <!-- end scripts -->
 {% endblock %}
 </body>
 </html>
-
