Mark all sections with translatable text

--- a/app/public/templates/about.html
+++ b/app/public/templates/about.html
@@ -5,7 +5,7 @@
 <div class="body-content">
     <div class="row">
       <h1>About</h1>
-      <p>This template was created by <a href="http://github.com/austinmcconnell/">Austin McConnell</a></p>
+      <p>{{ _('This template was created by') }}<a href="http://github.com/austinmcconnell/"> Austin McConnell'</a></p>
     </div>
 </div>
 {% endblock %}
