--- a/app/user/templates/reset_password.html
+++ b/app/user/templates/reset_password.html
@@ -1,10 +1,9 @@
-
 {% extends "base.html" %}
 
 {% block app_content %}
-    <h1>Reset Your Password</h1>
+    <h1>{{ _('Reset Your Password') }}</h1>
     <form id="passwordResetForm" class="form form-password-reset" method="POST" action="" role="form">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        {{ form.hidden_tag() }}
         <p>
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}<br>
