--- a/app/templates/401.html
+++ b/app/templates/401.html
@@ -1,15 +1,16 @@
-
 {% extends "base.html" %}
 
-{% block page_title %}Unauthorized{% endblock %}
+{% block page_title %}{{ _('Unauthorized') }}{% endblock %}
 
 {% block app_content %}
-<div class="jumbotron">
-    <div class="text-center">
-        <h1>401</h1>
-        <p>You are not authorized to see this page. Please <a href="{{ url_for('public.home')}}">log in</a> or
-            <a href="{{ url_for('user.register') }}">create a new account</a>.
-        </p>
+    <div class="jumbotron">
+        <div class="text-center">
+            <h1>401</h1>
+            <p>{{ _('You are not authorized to see this page. Please log in or create a new account.') }}<br><br>
+                <a href="{{ url_for('user.login') }}">{{ _('Log in') }}</a><br>
+                <a href="{{ url_for('user.register') }}">{{ _('Create account') }}</a>.
+
+            </p>
+        </div>
     </div>
-</div>
 {% endblock %}
