--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,13 +1,13 @@
 
 {% extends "base.html" %}
 
-{% block page_title %}Server error{% endblock %}
+{% block page_title %}{{ _('Server error') }}{% endblock %}
 
 {% block app_content %}
 <div class="jumbotron">
     <div class="text-center">
         <h1>500</h1>
-        <p>Sorry, something went wrong on our system. Don't panic, we are fixing it! Please try again later.</p>
+        <p>{{ _('Sorry, something went wrong on our system. Don\'t panic, we are fixing it! Please try again later.') }}</p>
     </div>
 </div>
 {% endblock %}
