--- a/app/templates/email/reset_password.html
+++ b/app/templates/email/reset_password.html
@@ -1,16 +1,16 @@
 
 
-<p>Dear {{ user.username }},</p>
+<p>{{ _('Hi %(username)s,', username=user.username) }}</p>
 <p>
-    To reset your password
+    {{ _('Reset your password by clicking the this link:') }}
     <a href="{{ url_for('user.reset_password', token=token, _external=True) }}">
-        click here
+        {{ _('click here') }}
     </a>.
 </p>
-<p>Alternatively, you can paste the following link in your browser's address bar:</p>
+<p>{{ _('Alternatively, paste the following link in your browser\'s address bar:') }}</p>
 <p>{{ url_for('user.reset_password', token=token, _external=True) }}</p>
-<p>If you have not requested a password reset simply ignore this message.</p>
-<p>Sincerely,</p>
+<p>{{  _('If you have not requested a password reset, simply ignore this message.') }}</p>
+<p>{{ _('Sincerely,') }}</p>
 
 
-<p>The My Flask App Team</p>
+<p>{{ _('The %(title)s team', title= 'My Flask App')}}</p>
