--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -6,9 +6,9 @@
 
     <ul class="footer-nav">
 
-      <li><a href="{{ url_for('public.about') }}">About</a></li>
+      <li><a href="{{ url_for('public.about') }}">{{  _('About') }}</a></li>
 
-      <li><a href="mailto:austin.s.mcconnell@gmail.com">Contact</a></li>
+      <li><a href="mailto:austin.s.mcconnell@gmail.com">{{ _('Contact') }}</a></li>
     </ul>
   </small>
 </footer>
