--- a/app/user/templates/login.html
+++ b/app/user/templates/login.html
@@ -1,24 +1,25 @@
-
 {% extends "base.html" %}
 {% block app_content %}
-<div class="container-narrow">
-  <h1>Sign In</h1>
-    <form id="loginForm" class="form form-login" method="POST" action="" role="form">
-        {{ form.hidden_tag() }}
-        <p>
-        <div class="form-group">
-                {{form.username.label}}
-                {{form.username(placeholder="Username", class_="form-control")}}
+    <div class="container-narrow">
+        <h1>{{ _('Sign In') }}</h1>
+        <form id="loginForm" class="form form-login" method="POST" action="" role="form">
+            {{ form.hidden_tag() }}
+            <p>
+            <div class="form-group">
+                {{ form.username.label }}
+                {{ form.username(class_="form-control") }}
             </div>
             <div class="form-group">
-                {{form.password.label}}
-                {{form.password(placeholder="Password", class_="form-control")}}
+                {{ form.password.label }}
+                {{ form.password(class_="form-control") }}
             </div>
-        <p>{{ form.submit(class_="btn btn-default btn-submit" ) }}</p>
-    </form>
-    <br>
-    <p>Forgot your password? Click <a href="{{ url_for('user.reset_password_request') }}">here</a> to reset it.</p>
+            <p>{{ form.submit(class_="btn btn-default btn-submit" ) }}</p>
+        </form>
+        <br>
+        <p>{{ _('Forgot Your Password?') }}
+            <a href="{{ url_for('user.reset_password_request') }}">{{ _('Click here to reset it') }}</a>
+        </p>
 
-{#    <p>New User? Click <a href="{{ url_for('user.register') }}">here</a> to register.</p>#}
-</div>
+        {#    <p>New User? Click <a href="{{ url_for('user.register') }}">here</a> to register.</p>#}
+    </div>
 {% endblock %}
