--- a/app/user/templates/register.html
+++ b/app/user/templates/register.html
@@ -1,29 +1,28 @@
-
 {% extends "base.html" %}
 {% block app_content %}
 <div class="container-narrow">
-  <h1>Register</h1>
+  <h1>{{ _('Register') }}</h1>
     <br/>
     <form id="registerForm" class="form form-register" method="POST" action="" role="form">
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+            {{ form.hidden_tag() }}
             <div class="form-group">
                 {{form.username.label}}
-                {{form.username(placeholder="Username", class_="form-control")}}
+                {{form.username(class_="form-control")}}
             </div>
             <div class="form-group">
                 {{form.email.label}}
-                {{form.email(placeholder="Email", class_="form-control")}}
+                {{form.email(class_="form-control")}}
             </div>
             <div class="form-group">
                 {{form.password.label}}
-                {{form.password(placeholder="Password", class_="form-control")}}
+                {{form.password(class_="form-control")}}
             </div>
             <div class="form-group">
                 {{form.confirm.label}}
-                {{form.confirm(placeholder="Password (again)", class_="form-control")}}
+                {{form.confirm(class_="form-control")}}
             </div>
             <p>{{ form.submit(class_="btn btn-default btn-submit") }}</p>
     </form>
-    <p><em>Already registered?</em> Click <a href="/">here</a> to login.</p>
+    <p><em>{{ _('Already registered?') }}</em><a href="/">{{ _('Click here to login')}}</a></p>
 </div>
 {% endblock %}
