Added section on front page about Flask-Babel

--- a/app/public/templates/home.html
+++ b/app/public/templates/home.html
@@ -25,5 +25,11 @@
       <p>{{ _('WTForms is a flexible forms validation and rendering library for python web development.') }}</p>
     </div>
   </div><!-- /.row -->
+<div class="row">
+    <div class="col-lg-4">
+      <h2><i class="fa fa-code"></i> Flask-Babel</h2>
+      <p>{{ _('Flask-Babel adds internationalization and localization support to the web app. It respects the user\'s preferred languages sent by the browser. Currently supported: French') }}</p>
+    </div>
+</div>
 </div>
 {% endblock %}
