--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -19,8 +19,8 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      <li><a href="{{ url_for('public.home') }}">{{ _(Home) }}</a></li>
-      <li><a href="{{ url_for('public.about') }}">{{ _(About) }}</a></li>
+      <li><a href="{{ url_for('public.home') }}">{{ _('Home') }}</a></li>
+      <li><a href="{{ url_for('public.about') }}">{{ _('About') }}</a></li>
     </ul>
     {% if current_user and current_user.is_authenticated %}
     <ul class="nav navbar-nav navbar-right">
