--- a/app/public/templates/about.html
+++ b/app/public/templates/about.html
@@ -1,11 +1,11 @@
-
 {% extends "base.html" %}
 
 {% block app_content %}
-<div class="body-content">
-    <div class="row">
-      <h1>About</h1>
-      <p>{{ _('This template was created by') }}<a href="http://github.com/austinmcconnell/"> Austin McConnell'</a></p>
+    <div class="body-content">
+        <div class="row">
+            <h1>About</h1>
+            <p>{{ _('This template was created by') }}<a href="http://github.com/austinmcconnell/">
+                Austin McConnell'</a></p>
+        </div>
     </div>
-</div>
 {% endblock %}
