--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,51 +1,56 @@
-
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
+    <div class="container">
 
-  <!-- Brand and toggle get grouped for better mobile display -->
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="{{ url_for('public.home') }}">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target=".navbar-ex1-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ url_for('public.home') }}">
 
-      My Flask App
+                My Flask App
 
-    </a>
-  </div>
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav">
-      <li><a href="{{ url_for('public.home') }}">{{ _('Home') }}</a></li>
-      <li><a href="{{ url_for('public.about') }}">{{ _('About') }}</a></li>
-        <li><a href="{{ url_for('user.edit_profile') }}">{{ _('Profile') }}</a></li>
-    </ul>
-    {% if current_user and current_user.is_authenticated %}
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            <p class="navbar-text"><a class="navbar-link" href="{{ url_for('user.members') }}">{{ _('Logged in as') }} {{ current_user.username }}</a></p>
-        </li>
-        <li>
-            <p class="navbar-text"><a class="navbar-link" href="{{ url_for('user.logout') }}"><i class="fa fa-sign-out">{{ _('Log out') }}</i></a></p>
-        </li>
+            </a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('public.home') }}">{{ _('Home') }}</a></li>
+                <li><a href="{{ url_for('public.about') }}">{{ _('About') }}</a></li>
+                <li><a href="{{ url_for('user.edit_profile') }}">{{ _('Profile') }}</a></li>
+            </ul>
+            {% if current_user and current_user.is_authenticated %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <p class="navbar-text"><a class="navbar-link"
+                                                  href="{{ url_for('user.members') }}">{{ _('Logged in as') }} {{ current_user.username }}</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p class="navbar-text"><a class="navbar-link"
+                                                  href="{{ url_for('user.logout') }}"><i
+                                class="fa fa-sign-out">{{ _('Log out') }}</i></a></p>
+                    </li>
 
-    </ul>
-    {% elif form %}
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="{{ url_for('user.register') }}">{{ _('Create account') }}</a></li>
-    </ul>
-    <form id="loginForm" method="POST" class="navbar-form form-inline navbar-right" action="/" role="login">
-      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-      <div class="form-group">
-        {{ form.username(class_="form-control") }}
-        {{ form.password(class_="form-control") }}
-      </div>
-      <button type="submit" class="btn btn-default">{{ _('Log in') }}</button>
-    </form>
-    {% endif %}
-  </div><!-- /.navbar-collapse -->
-  </div><!-- /.container -->
+                </ul>
+            {% elif form %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{{ url_for('user.register') }}">{{ _('Create account') }}</a></li>
+                </ul>
+                <form id="loginForm" method="POST" class="navbar-form form-inline navbar-right"
+                      action="/" role="login">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                    <div class="form-group">
+                        {{ form.username(class_="form-control") }}
+                        {{ form.password(class_="form-control") }}
+                    </div>
+                    <button type="submit" class="btn btn-default">{{ _('Log in') }}</button>
+                </form>
+            {% endif %}
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container -->
 </nav>
