--- a/app/user/templates/reset_password.html
+++ b/app/user/templates/reset_password.html
@@ -2,20 +2,21 @@
 
 {% block app_content %}
     <h1>{{ _('Reset Your Password') }}</h1>
-    <form id="passwordResetForm" class="form form-password-reset" method="POST" action="" role="form">
+    <form id="passwordResetForm" class="form form-password-reset" method="POST" action=""
+          role="form">
         {{ form.hidden_tag() }}
         <p>
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}<br>
             {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+                <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>
             {{ form.password2.label }}<br>
             {{ form.password2(size=32) }}<br>
             {% for error in form.password2.errors %}
-            <span style="color: red;">[{{ error }}]</span>
+                <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>{{ form.submit(class_="btn btn-default btn-submit") }}</p>
