--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,3 +1,5 @@
+{% import 'bootstrap/wtf.html' as wtf %}
+
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
 
