--- a/app/user/templates/edit_profile.html
+++ b/app/user/templates/edit_profile.html
@@ -1,25 +1,13 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>{{ _('Edit Profile') }}</h1>
-    <form id="editProfileForm" class="form form-edit-profile" method="post" action="" role="form">
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.username.label }}<br>
-            {{ form.username(class_="form-control") }}<br>
+    <div class="container-narrow">
+        <h1>{{ _('Edit Profile') }}</h1>
+        <div class="row">
+            <div class="col-md-6">
+                {{ wtf.quick_form(form) }}
+            </div>
         </div>
-        <div class="form-group">
-            {{ form.first_name.label }}<br>
-            {{ form.first_name(class_="form-control") }}<br>
-        </div>
-        <div class="form-group">
-            {{ form.last_name.label }}<br>
-            {{ form.last_name(class_="form-control") }}<br>
-        </div>
-        <div class="form-group">
-            {{ form.locale.label }}<br>
-            {{ form.locale(class_="form-control") }}<br>
-        </div>
-        <p>{{ form.submit(class_="btn btn-default btn-submit") }}</p>
-    </form>
+    </div>
 {% endblock %}
