--- a/app/user/templates/login.html
+++ b/app/user/templates/login.html
@@ -1,20 +1,14 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
+
 {% block app_content %}
     <div class="container-narrow">
         <h1>{{ _('Sign In') }}</h1>
-        <form id="loginForm" class="form form-login" method="POST" action="" role="form">
-            {{ form.hidden_tag() }}
-            <p>
-            <div class="form-group">
-                {{ form.username.label }}
-                {{ form.username(class_="form-control") }}
+        <div class="row">
+            <div class="col-md-6">
+                {{ wtf.quick_form(form, id='loginForm') }}
             </div>
-            <div class="form-group">
-                {{ form.password.label }}
-                {{ form.password(class_="form-control") }}
-            </div>
-            <p>{{ form.submit(class_="btn btn-default btn-submit" ) }}</p>
-        </form>
+        </div>
         <br>
         <p>{{ _('Forgot Your Password?') }}
             <a href="{{ url_for('user.reset_password_request') }}">{{ _('Click here to reset it') }}</a>
