--- a/app/user/templates/register.html
+++ b/app/user/templates/register.html
@@ -1,28 +1,15 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
+
 {% block app_content %}
     <div class="container-narrow">
         <h1>{{ _('Register') }}</h1>
-        <br/>
-        <form id="registerForm" class="form form-register" method="POST" action="" role="form">
-            {{ form.hidden_tag() }}
-            <div class="form-group">
-                {{ form.username.label }}
-                {{ form.username(class_="form-control") }}
+        <div class="row">
+            <div class="col-md-6">
+                {{ wtf.quick_form(form, id='registerForm') }}
             </div>
-            <div class="form-group">
-                {{ form.email.label }}
-                {{ form.email(class_="form-control") }}
-            </div>
-            <div class="form-group">
-                {{ form.password.label }}
-                {{ form.password(class_="form-control") }}
-            </div>
-            <div class="form-group">
-                {{ form.confirm.label }}
-                {{ form.confirm(class_="form-control") }}
-            </div>
-            <p>{{ form.submit(class_="btn btn-default btn-submit") }}</p>
-        </form>
+        </div>
+        <br>
         <p><em>{{ _('Already registered?') }}</em><a href="/">{{ _('Click here to login') }}</a></p>
     </div>
 {% endblock %}
