--- a/app/user/templates/reset_password.html
+++ b/app/user/templates/reset_password.html
@@ -1,24 +1,13 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>{{ _('Reset Your Password') }}</h1>
-    <form id="passwordResetForm" class="form form-password-reset" method="POST" action=""
-          role="form">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password2.label }}<br>
-            {{ form.password2(size=32) }}<br>
-            {% for error in form.password2.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit(class_="btn btn-default btn-submit") }}</p>
-    </form>
+    <div class="container-narrow">
+        <h1>{{ _('Reset Your Password') }}</h1>
+        <div class="row">
+            <div class="col-md-6">
+                {{ wtf.quick_form(form) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
