--- a/app/user/templates/reset_password_request.html
+++ b/app/user/templates/reset_password_request.html
@@ -1,21 +1,13 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
+
 {% block app_content %}
     <div class="container-narrow">
         <h1>{{ _('Reset Password') }}</h1>
-        <br>
-        <form id="passwordResetRequestForm" class="form form-password-reset-request" method="POST"
-              action="" role="form">
-            {{ form.hidden_tag() }}
-            <p>
-            <div class="form-group">
-                {{ form.email.label }}
-                {{ form.email(size=64, class_="form-control") }}
+        <div class="row">
+            <div class="col-md-6">
+                {{ wtf.quick_form(form) }}
             </div>
-            {% for error in form.email.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-            </p>
-            <p>{{ form.submit(class_="btn btn-default btn-submit") }}</p>
-        </form>
+        </div>
     </div>
 {% endblock %}
