--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -26,6 +26,16 @@ textarea {
   max-width: 700px;
 }
 
+.avatar {
+    border-radius: 50%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.open>.dropdown-menu {
+	display: grid;
+}
+
 /* Forms */
 
 .navbar-form input[type="text"],
