--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -23,21 +23,17 @@
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('public.home') }}">{{ _('Home') }}</a></li>
                 <li><a href="{{ url_for('public.about') }}">{{ _('About') }}</a></li>
-                <li><a href="{{ url_for('user.edit_profile') }}">{{ _('Profile') }}</a></li>
             </ul>
             {% if current_user and current_user.is_authenticated %}
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <p class="navbar-text"><a class="navbar-link"
-                                                  href="{{ url_for('user.members') }}">{{ _('Logged in as') }} {{ current_user.username }}</a>
-                        </p>
+                    <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                           aria-haspopup="true" aria-expanded="false" style="padding: unset">
+                            <img class="avatar" src="{{ current_user.avatar(40) }}" alt="User Avatar"></a>
+                        <ul class="dropdown-menu nav navbar-nav navbar-inverse">
+                            <li><a class="navbar-link" href="{{ url_for('user.profile') }}">{{ _('Profile') }}</a></li>
+                            <li><a class="navbar-link" href="{{ url_for('user.logout') }}">{{ _('Log out') }}</a></li>
+                        </ul>
                     </li>
-                    <li>
-                        <p class="navbar-text"><a class="navbar-link"
-                                                  href="{{ url_for('user.logout') }}"><i
-                                class="fa fa-sign-out">{{ _('Log out') }}</i></a></p>
-                    </li>
-
                 </ul>
             {% elif form %}
                 <ul class="nav navbar-nav navbar-right">
