--- a/app/user/templates/profile.html
+++ b/app/user/templates/profile.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
     <div class="container-narrow">
-        <h1>{{ _('Edit Profile') }}</h1>
+        <h1>{{ _('Profile') }}</h1>
         <div class="row">
             <div class="col-md-6">
                 {{ wtf.quick_form(form) }}
