Make footer sticky

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,5 +1,5 @@
-<footer>
-    <small>
+ <footer>
+    <div class="container">
         <ul class="company">
             <li>© Austin McConnell</li>
         </ul>
@@ -10,5 +10,5 @@
 
             <li><a href="mailto:austin.s.mcconnell@gmail.com">{{ _('Contact') }}</a></li>
         </ul>
-    </small>
+    </div>
 </footer>
