--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,11 +6,14 @@
 
 html {
   overflow-y: scroll;
+  position: relative;
+  min-height: 100%;
 }
 
 body {
-  padding-top: 50px;
-  padding-bottom: 20px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding-bottom: 50px;
 }
 
 section {
@@ -56,10 +59,15 @@ textarea {
 /* footer */
 
 footer {
-  margin-top: 45px;
-  padding-top: 5px;
-  border-top: 1px solid #eaeaea;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
   color: #999999;
+}
+
+footer .container {
+  padding: 10px;
 }
 
 footer a {
