--- a/app/user/templates/login.html
+++ b/app/user/templates/login.html
@@ -6,7 +6,7 @@
         <h1>{{ _('Sign In') }}</h1>
         <div class="row">
             <div class="col-md-6">
-                {{ wtf.quick_form(form, id='loginForm') }}
+                {{ wtf.quick_form(form, id='login-form') }}
             </div>
         </div>
         <br>
