Add specific styling to account for inline css removed from dropdown-toggle link

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -39,6 +39,10 @@ textarea {
 	display: grid;
 }
 
+.nav>li>a.dropdown-toggle {
+  padding: unset;
+}
+
 /* Forms */
 
 .navbar-form input[type="text"],
