Adding box on /home about secure headers

--- a/app/public/templates/home.html
+++ b/app/public/templates/home.html
@@ -30,6 +30,10 @@
                 <h2><i class="fa fa-code"></i> Flask-Babel</h2>
                 <p>{{ _('Flask-Babel adds internationalization and localization support to the web app. It respects the user\'s preferred languages sent by the browser. Currently supported: French') }}</p>
             </div>
+            <div class="col-lg-4">
+                <h2><i class="fa fa-code"></i> Secure.py</h2>
+                <p>{{ _('Secure.py enhances application security by enabling browser security policies. Secure header defaults come from OWASP Secure Headers project.') }}</p>
+            </div>
         </div>
     </div>
 {% endblock %}
