--- a/app/user/templates/members.html
+++ b/app/user/templates/members.html
@@ -2,6 +2,11 @@
 {% block app_content %}
     <h1>{{ _('Welcome %(username)s', username=current_user.username) }}</h1>
     <h3>{{ _('This is the members-only page') }}</h3>
+    {% if not current_user.get_task_in_progress('example') %}
+        <p>
+            <a href="{{ url_for('user.example_task') }}">{{ _('Run example task') }}</a>
+        </p>
+    {% endif %}
     {% if current_user.last_seen %}
         <p>Last seen on: {{ moment(current_user.last_seen.utcnow()).format('LLL') }}</p>
     {% endif %}
