--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,18 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
+        {% if current_user.is_authenticated %}
+            {% with tasks = current_user.get_tasks_in_progress() %}
+                {% if tasks %}
+                    {% for task in tasks %}
+                        <div class="alert alert-success" role="alert">
+                            {{ task.description }}
+                            <span id="{{ task.id }}-progress">{{ task.get_progress() }}</span>%
+                        </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        {% endif %}
 
         {# application content needs to be provided in the app_content block #}
         {% block app_content %}{% endblock %}
