--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -40,7 +40,8 @@ textarea {
 }
 
 .nav>li>a.dropdown-toggle {
-  padding: unset;
+  padding-top: unset;
+  padding-bottom: unset;
 }
 
 /* Forms */
@@ -101,4 +102,8 @@ footer .footer-nav {
   float: right;
   margin-right: 25px;
   list-style: none;
+}
+
+.message {
+  font-size: 20px;
 }
