--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,10 @@
     {{ moment.lang(g.locale) }}
     <link rel="stylesheet" href="{{ url_for('static', filename='js/main.js') }}">
     <script>
+        function set_message_count(n) {
+            $('#message_count').text(n);
+            $('#message_count').css('visibility', n ? 'visible' : 'hidden');
+        }
         function set_task_progress(task_id, progress) {
             $('#' + task_id + '-progress').text(progress);
         }
@@ -60,10 +64,16 @@
                     $.ajax('{{ url_for('user.notifications') }}?since=' + since).done(
                         function(notifications) {
                             for (let i = 0; i < notifications.length; i++) {
-                                if (notifications[i].name === 'task_progress')
-                                    set_task_progress(
-                                        notifications[i].data['task_id'],
-                                        notifications[i].data['progress']);
+                                switch (notifications[i].name) {
+                                    case 'unread_message_count':
+                                        set_message_count(notifications[i].data);
+                                        break;
+                                    case 'task_progress':
+                                        set_task_progress(
+                                            notifications[i].data['task_id'],
+                                            notifications[i].data['progress']);
+                                        break;
+                                }
                                 since = notifications[i].timestamp;
                             }
                         }
