--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -26,6 +26,14 @@
             </ul>
             {% if current_user and current_user.is_authenticated %}
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a class="navbar-link" href="{{ url_for('messages.messages') }}">{{ _('Messages') }}
+                        {% set new_messages = current_user.new_messages() %}
+                            <span id="message_count" class="badge"
+                            style="visibility: {%  if new_messages %}visible{% else %}hidden{% endif %}">
+                                {{ new_messages }}
+                            </span>
+                    </a>
+                    </li>
                     <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false">
                             <img class="avatar" src="{{ current_user.avatar(40) }}" alt="User Avatar"></a>
